LG-4792: Revise email languages layout to avoid text wrapping (#5906)
* LG-4792: Revise email languages layout to avoid text wrapping

**Why**: As a user, I want all information to be displayed in a clear visual hierarchy without visual design issues, so that I am not distracted while I am signing in or verifying my identity.

* Update CHANGELOG.md

--- a/app/assets/stylesheets/utilities/_space-misc.scss
+++ b/app/assets/stylesheets/utilities/_space-misc.scss
@@ -31,6 +31,10 @@
   padding-left: 24px;
 }
 
+.minw-full {
+  min-width: 100%;
+}
+
 @media #{$breakpoint-sm} {
   .sm-mr-20p {
     margin-right: 20px;
